# integrai-ops

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  health.py
backend/app/core/: config.py  logging.py  middleware.py  security.py
backend/app/db/: session.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: auth_service.py
backend/migrations/: env.py
backend/migrations/versions/: a26050162551_create_users_table.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_health.py
docs/: README.md  decisions.md  hub.css  index.html
docs/01-product-vision/: index.html  index.md  styles.css
docs/01-product-vision/js/: main.js
docs/02-architecture-portal/: index.html  styles.css
docs/02-architecture-portal/js/: main.js
docs/shared/branding/: brand-guidelines.md
